--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "eslint": "^8.35.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
